force-app/main/default/objects/SegmentOwnerDefault__c/SegmentOwnerDefault__c.object-meta.xml
<CustomObject>
    <label>Segment Owner Default</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Segment Owner Default Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segments Owner Defaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>