force-app/main/default/objects/SegmentOwnerDefault__c/fields/IsDefaultOwner__c.field-meta.xml
<CustomField>
    <fullName>IsDefaultOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default Owner</label>
    <type>Checkbox</type>
</CustomField>