force-app/main/default/objects/SegmentOwnerDefault__c/fields/IsSegmentHead__c.field-meta.xml
<CustomField>
    <fullName>IsSegmentHead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Segment Head</label>
    <type>Checkbox</type>
</CustomField>