force-app/main/default/objects/SegmentOwnerDefault__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>BusinessDivision__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>User__c</columns>
    <columns>Profile__c</columns>
    <columns>Role__c</columns>
    <columns>IsSegmentHead__c</columns>
    <columns>IsDefaultOwner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>